# calfnest

./: README.md
calfnest-repo-scaffold/calfnest/: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
calfnest-repo-scaffold/calfnest/calfnest/: __init__.py  acoustic.py  anomaly.py  consent.py  evaluate.py  features.py  model.py  rulemap.py  sis.py
calfnest-repo-scaffold/calfnest/docs/: architecture.md  interface.html  licences.md
calfnest-repo-scaffold/calfnest/firmware/: README.md  platformio.ini
calfnest-repo-scaffold/calfnest/firmware/src/: PLACE_DISSERTATION_FIRMWARE_HERE.txt
calfnest-repo-scaffold/calfnest/models/: quantize.py  serve.py  simulate.py  train.py  validate_synthetic.py
calfnest-repo-scaffold/calfnest/tests/: test_acoustic.py  test_anomaly.py  test_consent.py  test_evaluate.py  test_features.py  test_model.py  test_quantize.py  test_rulemap.py  test_serve.py  test_simulate.py  test_sis.py  test_validate_synthetic.py
