[project]
name = "calfnest"
version = "0.1.0"
description = "CALFNEST Sentinel — edge welfare intelligence for neonatal livestock"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy==1.26.4",
    "scipy==1.13.1",
    "scikit-learn==1.5.1",
]

[project.optional-dependencies]
serve = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic>=2"]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "ruff==0.6.2",
]
train = [
    "tensorflow==2.16.1",   # + tflite-micro for on-device int8 export
    "xgboost==2.1.1",       # baseline comparator
    "fastapi==0.112.2",     # cloud inference-management service
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
